--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -32,4 +34,23 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+
+    // Room
+    implementation "androidx.room:room-runtime:2.1.0-alpha03"
+    kapt "androidx.room:room-compiler:2.1.0-alpha03"
+
+
+    // Kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.0'
+
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 }
